@@ -1,3 +1,6 @@
+See <URL:http://tmda.net/upgrade.html> for instructions on how to use
+this file.
+
 ======================================================================
 
 If you are upgrading from a release of TMDA < 0.79:
