@@ -33,9 +33,8 @@ of TMDA's capabilities and features.
 is also recommended for a better understanding of TMDA.
 <br><br>
 
-<li>If you are upgrading from an earlier release of TMDA, make sure to
-consult the <strong>UPGRADE</strong> file that came with your TMDA
-distribution.
+<li>If you are upgrading from an earlier release of TMDA, see
+the <a href="upgrade.html">upgrade instructions</a>.
 <br><br>
 
 <li>Finally, consider joining one or more of the 
