@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Jun 18 14:04:34 2003 -->
+<!-- Thu Jul  3 14:23:09 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -93,6 +93,9 @@ Install
 </td></tr>
 <tr><td bgcolor="#cccccc">
 <a href="install.html">Installation</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="upgrade.html">Upgrading</a>
 </td></tr>
 <tr><td bgcolor="#cccccc">&nbsp;
 <tr><td bgcolor="#191970"><b><font color="#ffffff">
@@ -216,9 +219,8 @@ of TMDA's capabilities and features.
 is also recommended for a better understanding of TMDA.
 <br><br>
 
-<li>If you are upgrading from an earlier release of TMDA, make sure to
-consult the <strong>UPGRADE</strong> file that came with your TMDA
-distribution.
+<li>If you are upgrading from an earlier release of TMDA, see
+the <a href="upgrade.html">upgrade instructions</a>.
 <br><br>
 
 <li>Finally, consider joining one or more of the 
