@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Jun 18 14:04:36 2003 -->
+<!-- Thu Jul  3 14:05:40 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -93,6 +93,9 @@ Install
 </td></tr>
 <tr><td bgcolor="#cccccc">
 <a href="install.html">Installation</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="upgrade.html">Upgrading</a>
 </td></tr>
 <tr><td bgcolor="#cccccc">&nbsp;
 <tr><td bgcolor="#191970"><b><font color="#ffffff">
