@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Jun 18 14:04:39 2003 -->
+<!-- Thu Jul  3 14:24:23 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -93,6 +93,9 @@ Install
 </td></tr>
 <tr><td bgcolor="#cccccc">
 <a href="install.html">Installation</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="upgrade.html">Upgrading</a>
 </td></tr>
 <tr><td bgcolor="#cccccc">&nbsp;
 <tr><td bgcolor="#191970"><b><font color="#ffffff">
@@ -213,8 +216,8 @@ aren't running it already and see if the problem disappears, which is
 likely given the rate at which TMDA is being developed.<br><br>
 
 <li>Unless you are installing TMDA for the first time, make sure you
-are caught up with the <b>UPGRADE</b> file which comes with the
-distribution.<br><br>
+have followed the <a href="upgrade.html">upgrade instructions</a>.
+<br><br>
 
 <li>Read the <a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a> 
 to make sure your question has not already been
