@@ -1,0 +1,23 @@
+Title: Upgrading TMDA
+
+<h3>Upgrading TMDA</h3>
+
+Each TMDA release comes with an 
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tmda/tmda/UPGRADE" TARGET="Resource Window">UPGRADE</a> 
+file that lists
+incompatibilities with prior releases.  You need to make
+sure you satisfy these before upgrading your TMDA.<br><br>
+
+Do this by reading 
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tmda/tmda/UPGRADE" TARGET="Resource Window">UPGRADE</a> 
+from the bottom up, and start at
+the first applicable section.  Then follow all the instructions until
+you reach the top.  Not everything will apply to your particular
+configuration in which case you can skip them.  <br><br>
+
+For example, if you were upgrading from TMDA 0.61 to the latest
+release, you'd start at the following section:
+
+<i><blockquote>
+If you are upgrading from a release of TMDA < 0.63:
+</i></blockquote>
