@@ -1,16 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Jul  3 14:05:41 2003 -->
+<!-- Thu Jul  3 14:20:56 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
-Title: TMDA Press Coverage
+Title: Upgrading TMDA
 
 -->
 
 <head>
-<title>TMDA Press Coverage</title>
+<title>Upgrading TMDA</title>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <meta name="generator" content="HT2HTML/2.0">
 <style type="text/css">
@@ -79,7 +79,7 @@ Overview
 <a href="inuse.html">TMDA In Use</a>
 </td></tr>
 <tr><td bgcolor="#cccccc">
-<b>Press Coverage</b><!-- -*- html -*- -->
+<a href="press.html">Press Coverage</a><!-- -*- html -*- -->
 </td></tr>
 <tr><td bgcolor="#cccccc">&nbsp;
 <tr><td bgcolor="#191970"><b><font color="#ffffff">
@@ -95,7 +95,7 @@ Install
 <a href="install.html">Installation</a>
 </td></tr>
 <tr><td bgcolor="#cccccc">
-<a href="upgrade.html">Upgrading</a>
+<b>Upgrading</b>
 </td></tr>
 <tr><td bgcolor="#cccccc">&nbsp;
 <tr><td bgcolor="#191970"><b><font color="#ffffff">
@@ -186,77 +186,27 @@ Author
 <!-- end of sidebar cell -->
 <!-- start of body cell -->
 <td valign="top" width="90%" class="body"><br>
-<h3>TMDA Press Coverage</h3>
+<h3>Upgrading TMDA</h3>
 
-<h4>April 2003</h4>
-<ul>
-<li><a href="http://mla.libertine.org/tmda-announce/2003-04/msg00008.html" TARGET="Resource Window">
-<b>Sounding off: And none shall pass</b></a><br>
-<a href="http://www.sunday-times.co.uk/" TARGET="Resource Window">The Sunday Times</a>, David Hewson<br>
+Each TMDA release comes with an 
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tmda/tmda/UPGRADE" TARGET="Resource Window">UPGRADE</a> 
+file that lists
+incompatibilities with prior releases.  You need to make
+sure you satisfy these before upgrading your TMDA.<br><br>
 
-<blockquote>
-``What we need is some kind of halfway house: a whitelist with
-intelligence. And if you head off over to the home of the Tagged
-Message Delivery Agent, that is exactly what you will find.''
-</blockquote>
+Do this by reading 
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tmda/tmda/UPGRADE" TARGET="Resource Window">UPGRADE</a> 
+from the bottom up, and start at
+the first applicable section.  Then follow all the instructions until
+you reach the top.  Not everything will apply to your particular
+configuration in which case you can skip them.  <br><br>
 
-The readers of Britain's top-selling Sunday broadsheet are introduced
-to TMDA and the idea of whitelisting with challenges as an effective
-alternative to traditional filters.
-</ul>
+For example, if you were upgrading from TMDA 0.61 to the latest
+release, you'd start at the following section:
 
-<h4>November 2002</h4>
-<ul>
-<li><a href="http://slate.msn.com/?id=2074042" TARGET="Resource Window">
-<b>Death by Spam</b></a><br>
-Slate Magazine, Kevin Werbach<br>
-Also available on 
-<a href="http://www.msnbc.com/news/836654.asp" TARGET="Resource Window">MSNBC</a>.<br>
-
-<blockquote>
-``The e-mail you know and love is about to vanish.''
-</blockquote>
-
-TMDA is listed as one of the ``whitelist applications'' available today
-in this article about the changing tide of Internet e-mail, and the rise
-of whitelists as an effective countermeasure.
-</ul>
-
-<h4>October 2002</h4>
-<ul>
-<li><a href="http://www.cw360.com/article&rd=&i=&ard=116444&fv=1" TARGET="Resource Window">
-<b>Getting wired: Weapons for fighting spam</b></a><br>
-Computer Weekly, Glyn Moody<br><br>
-
-TMDA is mentioned at the end of this article as an example of using
-the whitelist methodology to fight spam.
-</ul>
-
-<h4>September 2002</h4>
-<ul>
-<li><a href="http://www.aardvark.co.nz/daily/2002/0926.shtml" TARGET="Resource Window">
-<b>At Last, A Cure For Spam</b></a><br>
-The Daily Aardvark, Bruce Simpson<br>
-
-<blockquote>
-``Believe it or not a cure for spam is readily available and 100% free -- 
-so why isn't your ISP using it?''
-</blockquote>
-
-A rave review of TMDA given to the readers of the Daily Aardvark, New
-Zealand's leading source of Net-Industry news and commentary.
-</ul>
-
-<h4>August 2002</h4>
-<ul>
-<li><a href="http://www.usatoday.com/tech/news/techpolicy/2002-08-05-spam_x.htm" TARGET="Resource Window">
-<b>Junk mail causing demand for anti-spam software</b></a><br>
-<a href="http://www.ap.org/" TARGET="Resource Window">The Associated Press</a>, Anick Jesdanun<br><br>
-
-TMDA is featured in this story about countermeasures, which is the
-last in a three-part series that examines the surge in spam, the
-people behind it, and the struggle to thwart them.
-</ul>
+<i><blockquote>
+If you are upgrading from a release of TMDA < 0.63:
+</i></blockquote>
 
 </td><!-- end of body cell -->
 </tr><!-- end of sidebar/body row -->
