@@ -1,3 +1,7 @@
+2003-07-03  Jason R. Mastaler  <jason@mastaler.com>
+
+	* upgrade.ht (Title): New file.
+
 2003-02-05  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* config-client.ht: Added SqWebMail blurb.
